Add compact SBK-GEM runtime copying
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>